# TARTM

./: README.rst  linkreview.md  pyproject.toml  score.json
code/: main.ipynb
doc/source/: conf.py
paper/: main.tex
slides/: main.tex
src/: README.rst  setup.py
src/pyartm/: matrix_em.py  regularization.py  thematizer.py  vectorizer.py
