[tool.poetry]
name = "artmxpytorch"
version = "0.1.0"
description = ""
authors = ["revit3d <tumanezhikov@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
numpy = "^1.26.4"
seaborn = "^0.13.2"
jupyterlab = "^4.1.6"
tqdm = "^4.66.2"
scikit-learn = "^1.4.2"
nltk = "^3.8.1"
bigartm10 = "^0.10.1"
protobuf = "3.20"
munkres = "^1.1.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
